# dpdk_bazel

./: .bazelrc  BUILD  MODULE.bazel  README.md  hello_world.cc  messages.proto  pmdinfogen.py.patch  unix_socket_client.cc  unix_socket_server.cc
